# djalgo

./: .bumpversion.toml  .gitignore  .python-version  README.md  play.py  pyproject.toml  requirements.txt  setup.cfg  untitled.txt
.github/: FUNDING.yml
.github/workflows/: deploy.yml  docs.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
djalgo/: __init__.py  analysis.py  conversion.py  djai.py  fractal.py  genetic.py  harmony.py  loop.py  minimalism.py  rhythm.py  setup.py  utils.py  walk.py
djalgo/data/: ca1D_rules.json
docs/: 00_getting-started.html  00_getting-started.ipynb  01_getting-started.html  01_getting-started.ipynb  01_musical.html  01_musical.ipynb  01_usage.html  02_api.html  02_harmony.html  02_harmony.ipynb  02_loops.html  02_loops.ipynb  03_loops.html  03_loops.ipynb  04_minimalism.html  04_minimalism.ipynb  05_walks.html  05_walks.ipynb  06_fractals.html  07_genetic.html  07_genetic.ipynb  08_ai.html  08_ai.ipynb  99_api.html  Makefile  Untitled.html  _usage.html  about.html  api.html  conf.py  genindex.html  index.html  index.rst  marimo-to-html.py  objects.inv  py-modindex.html  search.html  searchindex.js  test.ipynb  testing-djai.html  (+3 more)
docs/_midi-output/: twinkle_m21.mid  twinkle_pm.mid
docs/_modules/: index.html
docs/_modules/djalgo/: analysis.html  conversion.html  djai.html  fractal.html  genetic.html  harmony.html  loop.html  minimalism.html  rhythm.html  utils.html  walk.html
docs/_sources/: 00_getting-started.ipynb.txt  01_usage.ipynb.txt  02_harmony.ipynb.txt  02_loops.ipynb.txt  03_loops.ipynb.txt  04_minimalism.ipynb.txt  05_walks.ipynb.txt  06_fractals.ipynb.txt  08_ai.ipynb.txt  about.rst.txt  index.rst.txt  testing-gpflow.ipynb.txt
docs/_static/: documentation_options.js
docs/source/: 01_getting-started.ipynb  01_getting-started.py  02_harmony.ipynb  02_harmony.py  03_loops.ipynb  03_loops.py  04_minimalism.ipynb  04_minimalism.py  05_walks.ipynb  05_walks.py  06_fractals.ipynb  06_fractals.py  07_genetic.ipynb  07_genetic.py  08_ai.ipynb  08_ai.py  about.rst  api.rst  conf.py  index.rst  user-guide.rst
source/: 00_getting-started.ipynb  01_getting-started.ipynb  01_musical.ipynb  01_usage.ipynb  02_harmony.ipynb  02_loops.ipynb  03_loops.ipynb  04_minimalism.ipynb  05_walks.ipynb  06_fractals.ipynb  07_genetic.ipynb  08_ai.ipynb  about.rst  conf.py  index.rst  pl_score.mid  testing-djai.ipynb  testing-djgp.ipynb  testing-gpflow.ipynb  twinkle_m21.mid  twinkle_pm.mid
source/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
source/_djai-files/: lstm.keras  model_manager.keras  positional_encoding.keras  twinkle.midi
source/_djai-files/transfomer/: model_architecture.json  model_params.json  model_weights.weights.h5
source/_midi/: adams.mid  mario.mid  pinkpanther.mid  rocky.mid  tetris.mid
source/_midi-djai/: gru.model  rocky.mid  twinkle.mid
source/_midi-output/: ca-drums.mid  djai.mid  polyloop-twinkle.mid  polyloop.mid  twinkle_pm.mid
source/_midi-repaired/: adams.mid  mario.mid  pinkpanther.mid
source/_output/: djai.mid  lstm.keras  transformer.keras
source/_templates/: custom_sidebar.html
source/music/: ca.mid  minimalism_tracks.midi
src/djalgo/: __init__.py  conversion.py  djai.py  fractal.py  genetic.py  loop.py  player.py  rhythm.py  score.py  utils.py  walk.py
