[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djalgo"
version = "0.2-beta"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "matplotlib",
    "plotly"
]
requires-python = ">=3.8"
authors = [
    {name = "Essi Parent", email = "3pp0qk4a@duck.com"}
]
description = "A music composition toolkit"

readme = "README.md"
license = {file = "LICENSE"}
keywords = ["midi", "music"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Natural Language :: English"
]

[project.optional-dependencies]
music21 = ["music21"]
pretty_midi = ["pretty-midi"]
scamp = ["scamp"]
tensorflow = ["tensorflow"]

[project.urls]
Documentation = "https://essicolo.github.io/djalgo/"
Repository = "https://github.com/essicolo/djalgo.git"
Issues = "https://github.com/essicolo/djalgo/issues"